--- a/css/comments.css
+++ b/css/comments.css
@@ -18,6 +18,7 @@
 
 .comment-votes{
   margin-left: 10px;
+  vertical-align: center;
 }
 
 
@@ -29,7 +30,7 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   background: #A9A9A9;
   color: #555555;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
   font-size: 0.7em;
   line-height: 1.4em;
 	cursor:pointer;
@@ -49,7 +50,7 @@
   border-style: none solid solid none;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   color: #555555;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
   font-size: 1em;
   line-height: 1.4em;
   padding: 5px 8px;
@@ -70,7 +71,7 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   background: #A9A9A9;
   color: #555555;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
   font-size: 1em;
   line-height: 1.4em;
   padding: 5px 8px;
@@ -85,7 +86,7 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   background: #A9A9A9;
   color: #555555;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
   font-size: 1em;
   line-height: 1.4em;
   padding: 5px 8px;
@@ -102,7 +103,7 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   background: #A9A9A9;
   color: #555555;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
   font-size: 1em;
   line-height: 1.4em;
   padding: 5px 8px;
@@ -120,7 +121,7 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   background: #A9A9A9;
   color: #555555;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
   font-size: 0.7em;
   line-height: 1.4em;
   cursor:pointer;
