--- a/css/comments.css
+++ b/css/comments.css
@@ -1,3 +1,6 @@
+#comments{
+  margin-bottom: 2em;
+}
 .user-comment {
   padding: 10px;
   margin: 20px 0 10px 0;
@@ -24,13 +27,11 @@
 
 .write-comment{
 	margin-left: 10px;
-	height: 20px;
-  border-radius: 3px 3px 3px 3px;
-  border-style: none solid solid none;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
-  background: #A9A9A9;
-  color: #555555;
-  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
+  padding: 10px;
+  border-style: none;
+  background: var(--red2);
+  color: white;
+  font-family: "Montserrat",Helvetica,Arial,sans-serif;
   font-size: 0.7em;
   line-height: 1.4em;
 	cursor:pointer;
@@ -47,10 +48,9 @@
   height: 100px;
   background: rgba(0, 0, 0, 0.07);
   border-radius: 6px 6px 6px 6px;
-  border-style: none solid solid none;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
+  border-style: none;
   color: #555555;
-  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
+  font-family: "Montserrat",Helvetica,Arial,sans-serif;
   font-size: 1em;
   line-height: 1.4em;
   padding: 5px 8px;
@@ -66,28 +66,24 @@
 
 .comment-input-div > .post-comment-btn {
   height: 30px;
-  border-radius: 6px 6px 6px 6px;
-  border-style: none solid solid none;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
-  background: #A9A9A9;
-  color: #555555;
-  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
-  font-size: 1em;
+  padding: 10px;
+  border-style: none;
+  background: var(--red2);
+  color: white;
+  font-family: "Montserrat",Helvetica,Arial,sans-serif;
   line-height: 1.4em;
   padding: 5px 8px;
   margin-left: 15px;
   cursor: pointer;
 }
 
+
 .comment-input-div > .edit-comment-btn {
   height: 30px;
-  border-radius: 6px 6px 6px 6px;
-  border-style: none solid solid none;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
-  background: #A9A9A9;
-  color: #555555;
-  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
-  font-size: 1em;
+  border-style: none;
+  background: var(--red2);
+  color: white;
+  font-family: "Montserrat",Helvetica,Arial,sans-serif;
   line-height: 1.4em;
   padding: 5px 8px;
   position: absolute;
@@ -103,7 +99,7 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   background: #A9A9A9;
   color: #555555;
-  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
+  font-family: "Montserrat",Helvetica,Arial,sans-serif;
   font-size: 1em;
   line-height: 1.4em;
   padding: 5px 8px;
@@ -115,13 +111,11 @@
 
 
 .replyBtn{
-  height: 20px;
-  border-radius: 3px 3px 3px 3px;
-  border-style: none solid solid none;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
-  background: #A9A9A9;
-  color: #555555;
-  /* font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
+  padding: 10px;
+  border-style: none;
+  background: var(--red2);
+  color: white;
+  font-family: "Montserrat",Helvetica,Arial,sans-serif;
   font-size: 0.7em;
   line-height: 1.4em;
   cursor:pointer;
