--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ body > header #logo img:hover {
 }
 
 /* Full-width input fields */
-.container input[type=text], .container input[type=password], .container input[type=email], .container input[type=url] {
+.container input[type=text], .container input[type=password], .container input[type=email], .container input[type=url]{
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -205,7 +205,7 @@ div .register > button {
     position: relative;
 }
 
-div .container > button {
+div .container > button, #user-profile-sidebar input[type=submit]{
     background-color: var(--red2);
     color: white;
     padding: 14px 20px;
@@ -329,18 +329,22 @@ button:hover {
   margin: 0em 2em;
 }
 
+#user-history{
+  margin-top: 2em;
+}
+
 #single-post{
   margin: 2em 2em 0em;
 }
 
 
-#posts article, #search-posts article, #channel-posts article {
+#posts article, #search-posts article, #channel-posts article, #search-comments article {
   border-bottom-style:solid;
   border-bottom-color: var(--light2);
   border-bottom-width: 1px;
 }
 
-#posts article:last-child, #search-posts article:last-child, #channel-posts article:last-child {
+#posts article:last-child, #search-posts article:last-child, #search-comments article:last-child, #channel-posts article:last-child {
   border-bottom-style:none;
 }
 
@@ -422,16 +426,16 @@ article .votes {
 
 
 
-#posts article > header, #posts article > footer, #single-post article > header, #single-post article > footer, #search-posts article > header, #search-posts article > footer, #channel-posts article > header, #channel-posts article > footer  {
+#posts article > header, #posts article > footer, #single-post article > header, #single-post article > footer, #search-posts article > header, #search-posts article > footer, #search-comments article > header, #search-comments article > footer, #channel-posts article > header, #channel-posts article > footer  {
   margin-left: 2em;
   margin-top: 0;
 }
 
-#posts article .username:before, #single-post article .username:before, #search-posts article .username:before, #channel-posts article .username:before {
+#posts article .username:before, #single-post article .username:before, #search-posts article .username:before,  #search-comments article .username:before, #channel-posts article .username:before {
   content: ' · posted by ';
 }
 
-#posts article .username:after, #single-post article .username:after, #search-posts article .username:after, #channel-posts article .username:after {
+#posts article .username:after, #single-post article .username:after, #search-posts article .username:after,  #search-comments article .username:after, #channel-posts article .username:after {
   content: ' in';
 }
 
@@ -534,7 +538,7 @@ body > header #channels li:nth-child(n):hover, #search-channels li:nth-child(n):
   content: '#';
 }
 
-#search-posts{
+#search-posts, #search-comments{
   margin-right: 2em;
 }
 
@@ -548,7 +552,7 @@ body > header #channels li:nth-child(n):hover, #search-channels li:nth-child(n):
   text-align: center;
 }
 
-#sidebar{
+#sidebar, #user-profile-sidebar, #settings-sidebar{
   background-color: var(--light2);
   padding: 1em;
   text-align: justify;
@@ -557,7 +561,42 @@ body > header #channels li:nth-child(n):hover, #search-channels li:nth-child(n):
   border-radius: 15px;
 }
 
-#sidebar button{
+#user-profile-sidebar, #settings-sidebar{
+  margin-top: 2em;
+  text-align: center;
+}
+
+#user-profile-sidebar .username{
+  font-weight: 600;
+  font-size: 2em;
+}
+
+#user-profile-sidebar .username:before{
+  content: '@';
+}
+
+#settings-update{
+  display: flex;
+  flex-direction: column;
+  margin: 0em 2em;
+  padding: 0em 5em;
+}
+
+#settings-update form{
+  display: flex;
+  flex-direction: column;
+  background-color: var(--light2);
+  margin: 2em 0em;
+  padding: 2em;
+  border-radius: 10px;
+  text-align: center;
+}
+
+#settings-update form input{
+  margin: 10px 0;
+}
+
+#sidebar button, #user-profile-sidebar button{
   background-color: var(--red2);
   color: white;
   padding: 14px 20px;
