--- a/css/layout.css
+++ b/css/layout.css
@@ -12,7 +12,7 @@
 body {
   display: grid;
   grid-template-columns: [start] 4fr [middle] 1.25fr [end];
-  grid-template-rows: [start] 7em [nav sort search-big search error single-post] auto [posts search-results] auto [sidebar] auto [footer] auto [end];
+  grid-template-rows: [start] 7em [nav sort search-big search error single-post] auto [posts search-results] auto [load-more] auto [sidebar] auto [footer] auto [end];
 }
 
 /* main layout */
@@ -55,8 +55,14 @@ body > header {
 
 
 #posts, #channel-posts {
-  grid-row: posts / footer;
+  grid-row: posts / load-more;
   grid-column: start / middle;
+}
+
+#load-more {
+  grid-row: load-more / footer;
+  grid-column: start / middle;
+
 }
 
 #channel-empty-block {
